# napari-SAMV2

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/UI_files/: SAM_V2.ui
src/napari_samv2/: __init__.py  _widget.py  napari.yaml
src/napari_samv2/_tests/: test_widget.py
src/pipelines/samv2/: Samv2_pipeline_handler.py
